# add_product_to_order

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
src/api/: product.py
src/core/: config.py
src/crud/: base.py  order.py  product.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2026_01_28_1721-8340c4439d7d_create_models.py  2026_01_29_1506-e70de171b6db_create_models.py  2026_01_29_1552-6dc844573d3e_add_data.py  2026_01_29_1638-2f721e84592d_create_view_top_5.py
src/models/: models.py  partition.py  view.py
src/schemas/: order.py
src/services/: order.py  product.py
src/tools/: exception_route.py  exceptions.py
